--- a/index.html
+++ b/index.html
@@ -60,12 +60,10 @@
             padding-left: 50px;
             scroll-snap-align: start;
             opacity: 0;
-            transform: translateY(50px);
-            transition: opacity 0.8s ease, transform 0.8s ease;
+            transition: opacity 2.5s ease;
         }
         section.active {
             opacity: 1;
-            transform: translateY(0);
         }
         section::before {
             content: "";
