Added privacy policy

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                 <li><a href="#products">Products</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="privacy-policy.html">Privacy Policy</a></li>				
             </ul>
         </nav>
     </header>
@@ -160,7 +161,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 InKern AI. All rights reserved.</p>
+        <p>&copy; 2024 InKern AI. All rights reserved. | <a href="privacy-policy.html">Privacy Policy</a></p>
     </footer>
 
     <script>
